@@ -1,3 +1,10 @@
+2011-01-13  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclExecute.c (GrowEvaluationStack): Off-by-one error in
+	sizing the new allocation - was ok in comment but wrong in the code.
+	Triggered by [Bug 3142026] which happened to require exactly one more
+	than what was in existence. BACKPORT.
+
 2011-01-03  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* tools/genStubs.tcl:  Fix "make genstubs", which was broken
